Fix required inputs

--- a/action.yml
+++ b/action.yml
@@ -1,10 +1,18 @@
 name: 'Wait'
 description: 'Wait a designated number of milliseconds'
 inputs:
-  milliseconds:  # id of input
-    description: 'number of milliseconds to wait'
+  drive-credentials:  # id of input
+    description: 'Base64 json of your drive credentials'
     required: true
-    default: '1000'
+    default: ''
+  drive-folder-id:  # id of input
+    description: 'Drive folder id to uplaod the files'
+    required: true
+    default: ''
+  folder-to-upload:  # id of input
+    description: 'Folder of your project to upload to drive'
+    required: true
+    default: ''
 outputs:
   time: # output will be available to future steps
     description: 'The current time after waiting'
