--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "javascript-action",
+  "name": "upload-to-drive-action",
   "version": "1.0.0",
-  "description": "JavaScript Action Template",
+  "description": "JavaScript action to upload git repository to drive",
   "main": "index.js",
   "scripts": {
     "lint": "eslint .",
     "prepare": "ncc build index.js -o dist --source-map --license licenses.txt",
     "test": "jest",
-    "all": "npm run lint && npm run prepare && npm run test"
+    "all": "npm run lint && npm run prepare && npm run test",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -25,10 +26,14 @@
   },
   "homepage": "https://github.com/actions/javascript-action#readme",
   "dependencies": {
-    "@actions/core": "^1.10.0"
+    "@actions/core": "^1.10.0",
+    "@google-cloud/local-auth": "^2.1.0",
+    "googleapis": "^105.0.0",
+    "mime": "^3.0.0"
   },
   "devDependencies": {
     "@vercel/ncc": "^0.36.1",
+    "dotenv": "^16.0.3",
     "eslint": "^8.37.0",
     "jest": "^29.5.0"
   }
